# 2d_bin_packing_cellpainting

./: README.md  assign_patches.py  columns.py  example.ipynb  pyproject.toml
data/standardized/df_cell_locations.parquet/Assay_Plate_Barcode=BR00116991/: af3e3401d20541488e42bd65ee046711-0.parquet
data/standardized/df_cell_locations.parquet/Assay_Plate_Barcode=BR00116993/: af3e3401d20541488e42bd65ee046711-0.parquet
data/standardized/df_cell_locations.parquet/Assay_Plate_Barcode=BR00116994/: af3e3401d20541488e42bd65ee046711-0.parquet
data/standardized/df_cell_locations.parquet/Assay_Plate_Barcode=BR00116995/: af3e3401d20541488e42bd65ee046711-0.parquet
data/standardized/df_cell_locations.parquet/Assay_Plate_Barcode=BR00116996/: af3e3401d20541488e42bd65ee046711-0.parquet
data/standardized/df_cell_locations.parquet/Assay_Plate_Barcode=BR00116997/: af3e3401d20541488e42bd65ee046711-0.parquet
data/standardized/df_cell_locations.parquet/Assay_Plate_Barcode=BR00116998/: af3e3401d20541488e42bd65ee046711-0.parquet
data/standardized/df_cell_locations.parquet/Assay_Plate_Barcode=BR00116999/: af3e3401d20541488e42bd65ee046711-0.parquet
data/standardized/df_cell_locations.parquet/Assay_Plate_Barcode=BR00117000/: af3e3401d20541488e42bd65ee046711-0.parquet
data/standardized/df_cell_locations.parquet/Assay_Plate_Barcode=BR00117001/: af3e3401d20541488e42bd65ee046711-0.parquet
data/standardized/df_cell_locations.parquet/Assay_Plate_Barcode=BR00117002/: af3e3401d20541488e42bd65ee046711-0.parquet
(+97 files in other folders)
